# Organoid-electrophysiology-ML

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
src/organoid_analysis/: __init__.py
src/organoid_analysis/analysis/: __init__.py  pipeline.py
src/organoid_analysis/core/: __init__.py  classifier.py  feature_extractor.py  simulator.py
src/organoid_analysis/utils/: __init__.py  data_processing.py  visualization.py
tests/: test_simulator.py
